welcome.lessons.welcome.methods.picture.PictureMono.scala.error
PictureMono:8: error: Unit does not take parameters
marquerSol();
          ^PictureMono:12: error: Unit does not take parameters
marquerSol();
          ^PictureMono:16: error: Unit does not take parameters
marquerSol();
          ^PictureMono:21: error: not found: value faireV
	faireV();
        ^